Fix menu button svg opacity

--- a/preview/styles.css
+++ b/preview/styles.css
@@ -170,11 +170,6 @@ th:first-child .page-display { float: left; }
   margin-left: 2px;
 }
 
-.chart-container {
-  display: inline-block;
-  position: relative;
-}
-
 /*
  * The section below pertains to the editor.
  * Most of this section comes from ProseMirror sources
@@ -359,10 +354,6 @@ li.ProseMirror-selectednode:after {
   border-radius: 4px;
 }
 
-.ProseMirror-menu-disabled {
-  opacity: .3;
-}
-
 .ProseMirror-menu-submenu-wrap:hover .ProseMirror-menu-submenu, .ProseMirror-menu-submenu-wrap-active .ProseMirror-menu-submenu {
   display: block;
 }
@@ -404,6 +395,10 @@ li.ProseMirror-selectednode:after {
 
 .ProseMirror-icon span {
   vertical-align: text-top;
+}
+.ProseMirror-menu-disabled svg {
+  fill: lightgray;
+  stroke: lightgray;
 }
 .ProseMirror-gapcursor {
   display: none;
