--- a/site/guides/styles.css
+++ b/site/guides/styles.css
@@ -50,8 +50,8 @@ h1, h2, h3, h5 {
   margin: 1em 0 1em 0;
 }
 
-h1 { font-size: 130%; margin-top: 3em; }
-h2 { font-size: 105%; margin-top: 2em; }
+h1 { font-size: 130%; margin-top: 2em; }
+h2 { font-size: 105%; margin-top: 1em; }
 h3 { font-size: 100%; margin-top: 1em; }
 h4 { font-size: 100%; margin: 1em 0 1em 0; font-weight: bold; }
 h5 { font-size: 110%; text-align: center; }
@@ -94,7 +94,7 @@ table {
 }
 
 li.tight > p {
-  margin: -0.5em 0 0.75em 0;
+  margin: -0.5em 0 0 0;
 }
 
 div.indented { margin-left: 2em; }
