--- a/preview/styles.css
+++ b/preview/styles.css
@@ -84,6 +84,14 @@ code {
   color: #0a0a0a;
 }
 
+.hmt-code {
+  white-space: pre;
+  background-color: #f6f8fa;
+  font-family: Consolas,"Liberation Mono",Courier,monospace;
+  font-weight: normal;
+  font-size: 0.9em;
+}
+
 pre {
   padding: 10px;
 }
