--- a/preview/docStyles.css
+++ b/preview/docStyles.css
@@ -452,93 +452,113 @@ Unicode range 1D49C to 1D4B5.
 */
 
 @font-face {
-font-family: 'Temml';
-src: url('Temml.woff2') format('woff2');
-font-weight: normal;
-font-style: normal;
+  font-family: 'Temml';
+  src: url('Temml.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-font-family: Latin Modern Math;
-src: url('./latinmodernmath.woff2');
+  font-family: Latin Modern Math;
+  src: url('./latinmodernmath.woff2');
 }
 
 math {
-font-style: normal;
-font-weight: normal;
-line-height: normal;
-font-size-adjust: none;
-text-indent: 0;
-text-transform: none;
-letter-spacing: normal;
-word-wrap: normal;
-direction: ltr;
+  font-style: normal;
+  font-weight: normal;
+  line-height: normal;
+  font-size-adjust: none;
+  text-indent: 0;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  direction: ltr;
 }
 
 math * {
-border-color: currentColor;
+  border-color: currentColor;
 }
 
 math {
-font-family: "Latin Modern Math", math;
+  font-family: "Latin Modern Math", math;
 }
 
 /* Next line is active in Firefox and Safari.
-* Not in Chromium, which recognizes display: "block math" written inline. */
+ * Not in Chromium, which recognizes display: "block math" written inline. */
 math.tml-display { display: block; }
 
 *.mathscr {
-font-family: "Temml";
+  font-family: "Temml";
 }
 
 /* Chromium prime alignment */
 mo.tml-prime {
-font-family: Temml;
+  font-family: Temml;
 }
 
 /* Prevent f' from overlapping in Chromium */
 mo.prime-pad {
-padding-left: 0.08em;
+  padding-left: 0.08em;
 }
 
-/* Stretch \widetilde in Chromium */
+/* Array cell justification in Firefox & WebKit */
+.tml-right {
+  text-align: right;
+}
+.tml-left {
+  text-align: left;
+}
+
+/* Stretch \widetilde & set array cell justification in Chromium */
 @supports (not (-webkit-backdrop-filter: blur(1px))) and (not (-moz-appearance: none)) {
-.tml-crooked-2 {
+  .tml-crooked-2 {
     transform: scale(2.0, 1.1)
-}
-.tml-crooked-3 {
+  }
+  .tml-crooked-3 {
     transform: scale(3.0, 1.3)
-}
-.tml-crooked-4 {
+  }
+  .tml-crooked-4 {
     transform: scale(4.0, 1.4)
+  }
+  .tml-right {
+    text-align: -webkit-right;
+  }
+  .tml-left {
+    text-align: -webkit-left;
+  }
 }
+
+/* Adjust WebKit accents */
+@supports (-webkit-backdrop-filter: blur(1px)) {
+  .tml-xshift { transform: translate(0px, 0.45em) }
+  .tml-capshift { transform: translate(0px, 0.35em) }
 }
 
 /* flex-wrap for line-breaking in Chromium */
 math {
-display: inline-flex;
-flex-wrap: wrap;
-align-items: baseline;
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-items: baseline;
 }
 math > mrow {
-padding: 0.5ex 0ex;
+  padding: 0.5ex 0ex;
 }
 
 /* Avoid flex-wrap in Firefox */
 @-moz-document url-prefix() {
-math { display: inline; }
-math > mrow { padding: 0 }
+  math { display: inline; }
+  math > mrow { padding: 0 }
 }
 
 /* AMS environment auto-numbering via CSS counter. */
 .tml-eqn::before {
-counter-increment: tmlEqnNo;
-content: "(" counter(tmlEqnNo) ")";
+  counter-increment: tmlEqnNo;
+  content: "(" counter(tmlEqnNo) ")";
 }
 
 body {
-counter-reset: tmlEqnNo;
-}  
+  counter-reset: tmlEqnNo;
+}
 
 /* This section sets math sizes */
 math   { font-size: 1em; }
