--- a/preview/styles.css
+++ b/preview/styles.css
@@ -248,6 +248,9 @@ th:first-child .page-display { float: left; }
 .ProseMirror li.tight > p {
   margin: -0.5em 0 0.75em 0;
 }
+.ProseMirror td > ul > li.tight:first-child > p {
+  margin-top: 0em;
+}
 
 .ProseMirror-hideselection *::selection { background: transparent; }
 .ProseMirror-hideselection *::-moz-selection { background: transparent; }
