--- a/preview/styles.css
+++ b/preview/styles.css
@@ -19,7 +19,6 @@ body {
   font-family: Calibri, 'Helvetica Neue', Arial, Cambria, sans-serif;
   font-size: 12pt;
   position: relative;
-  counter-reset: pageNum 1;
 }
 .long-primer { font-size: 10pt; }
 
@@ -174,7 +173,7 @@ article {
 @media screen {
   #print-div { display: none; }
 }
-div #print-div { width: 672px; font-size: 12pt; }
+div #print-div { width: 672px; font-size: 12pt; counter-increment: pageNum; }
 div #print-div .long-primer { font-size: 10 pt; }
 .header { break-before: page; counter-increment: pageNum; }
 .page-display::after { content: counter(pageNum); }
@@ -220,13 +219,11 @@ th:first-child .page-display { float: left; }
 
  .ProseMirror {
   position: relative;
-  content-visibility: auto;
   contain-intrinsic-size: 1000px;
 }
 
 .ProseMirror {
   word-wrap: break-word;
-  white-space: pre-wrap;
   -webkit-font-variant-ligatures: none;
   font-variant-ligatures: none;
 }
@@ -473,13 +470,13 @@ li.ProseMirror-selectednode:after {
 }
 /* Add space around the hr to make clicking it easier */
 
-.ProseMirror-example-setup-style hr {
+.ProseMirror-setup hr {
   padding: 2px 10px;
   border: none;
   margin: 1em 0;
 }
 
-.ProseMirror-example-setup-style hr:after {
+.ProseMirror-setup hr:after {
   content: "";
   display: block;
   height: 1px;
@@ -518,7 +515,7 @@ li.ProseMirror-selectednode:after {
   font-style: normal;
 }
 
-.ProseMirror-example-setup-style img {
+.ProseMirror-setup img {
   cursor: default;
 }
 
@@ -669,10 +666,9 @@ ul.toc span + span {
   padding: 5px 0;
   margin-bottom: 23px;
   width: 838px;
-  overflow-x: hidden;
   z-index: 2;
 }
-.ProseMirror-example-setup-style {
+.ProseMirror-setup {
   margin: 0 83px;
 }
 
@@ -752,59 +748,59 @@ ul.toc span + span {
   display: block;
 }
 
-.ProseMirror div.indented { margin-left: 2em; }
-.ProseMirror div.centered { text-align: center; }
-.ProseMirror div.right-justified { text-align: right; }
-.ProseMirror div.boxed { width: fit-content; min-width: 2em; border: 1px solid #000; }
-.ProseMirror div.boxed p { line-height: 1.2; margin: 4px; }
+div.indented { margin-left: 2em; }
+div.centered { text-align: center; }
+div.right-justified { text-align: right; }
+div.boxed { width: fit-content; min-width: 2em; border: 1px solid #000; }
+div.boxed p { line-height: 1.2; margin: 4px; }
 
-.ProseMirror div.note,
-.ProseMirror div.tip,
-.ProseMirror div.important,
-.ProseMirror div.warning {
+div.note,
+div.tip,
+div.important,
+div.warning {
   padding: 0 1em 8px 1em;
   margin-bottom: 16px;
   color: inherit;
 }
-.ProseMirror div.note > *:first-child::before {
+div.note > *:first-child::before {
   content: "🛈   Note\A";
   white-space: pre;
   color: rgb(9, 105, 218);
   line-height: 2em;
 }
-.ProseMirror div.note > *:last-child,
-.ProseMirror div.tip > *:last-child,
-.ProseMirror div.important > *:last-child,
-.ProseMirror div.warning > *:last-child {
+div.note > *:last-child,
+div.tip > *:last-child,
+div.important > *:last-child,
+div.warning > *:last-child {
   padding-bottom: 0px;
   margin-bottom: 0px;
 }
 
-.ProseMirror div.note {
+div.note {
   border-left: .25em solid rgb(9, 105, 218)
 }
-.ProseMirror div.tip {
+div.tip {
   border-left: .25em solid rgb(80, 185, 250)
 }
-.ProseMirror div.important {
+div.important {
   border-left: .25em solid rgb(130, 80, 223)
 }
-.ProseMirror div.warning {
+div.warning {
   border-left: .25em solid rgb(154, 103, 0)
 }
-.ProseMirror div.tip > *:first-child::before {
+div.tip > *:first-child::before {
   content: "💡  Tip\A";
   white-space: pre;
   color: rgb(9, 105, 218);
   line-height: 2em;
 } 
-.ProseMirror div.important > *:first-child::before {
+div.important > *:first-child::before {
   content: "⚠  Important\A";
   white-space: pre;
   color: rgb(130, 80, 223);
   line-height: 2em;
 } 
-.ProseMirror div.warning > *:first-child::before {
+div.warning > *:first-child::before {
   content: "⚠  Warning\A";
   white-space: pre;
   color: rgb(154, 103, 0);
@@ -968,9 +964,48 @@ math > mrow {
 }
 
 body {
-  counter-reset: tmlEqnNo;
+  counter-reset: tmlEqnNo pageNum 1;
 }
- 
+
+.ProseMirror {
+  counter-reset: prosemirror-footnote;
+}
+footnote {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+footnote::after {
+  content: counter(prosemirror-footnote);
+  vertical-align: super;
+  font-size: 75%;
+  counter-increment: prosemirror-footnote;
+}
+.ProseMirror-hideselection .footnote-tooltip *::selection { background-color: transparent; }
+.ProseMirror-hideselection .footnote-tooltip *::-moz-selection { background-color: transparent; }
+.footnote-tooltip {
+  cursor: auto;
+  position: absolute;
+  left: -30px;
+  top: calc(100% + 10px);
+  background: silver;
+  padding: 3px;
+  border-radius: 2px;
+  width: 500px;
+}
+.footnote-tooltip::before {
+  border: 5px solid silver;
+  border-top-width: 0px;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  position: absolute;
+  top: -5px;
+  left: 27px;
+  content: " ";
+  height: 0;
+  width: 0;
+}
+
 /* This section modifies Temml math CSS */
 math   { font-size: 1em; }
 math .special-fraction { font-family: "Times New Roman"; }
