Change from Hurmet.app to Hurmet.org

--- a/preview/styles.css
+++ b/preview/styles.css
@@ -1,4 +1,4 @@
-/* This file contains the CSS for Hurmet.app
+/* This file contains the CSS for Hurmet.org
  * Parts of this file were once in separate files.
  * That being the ProseMirror editor section and tables section.
  * temml.css is included here as well.
