--- a/preview/styles.css
+++ b/preview/styles.css
@@ -529,6 +529,30 @@ li.ProseMirror-selectednode:after {
   list-style-type: lower-roman;
 }
 
+.ProseMirror ol.upper-alpha li {
+  list-style-type:upper-alpha;
+}
+
+.ProseMirror ol.upper-alpha ol li {
+  list-style-type: decimal;
+}
+
+.ProseMirror ol.upper-alpha ol ol li {
+  list-style-type: lower-alpha;
+}
+
+.ProseMirror ol.lower-alpha li {
+  list-style-type: lower-alpha;
+}
+
+.ProseMirror ol.lower-alpha ol li {
+  list-style-type: decimal;
+}
+
+.ProseMirror ol.lower-alpha ol ol li {
+  list-style-type: lower-roman;
+}
+
 .ProseMirror blockquote {
   padding-left: 1em;
   border-left: 3px solid #eee;
