--- a/preview/styles.css
+++ b/preview/styles.css
@@ -21,6 +21,7 @@ body {
   position: relative;
 }
 .long-primer { font-size: 10pt; }
+.pica        { font-size: 12pt; }
 
 nav {
   max-width: 838px;
@@ -1304,6 +1305,14 @@ td, th {
 /*
  * This section deals with CSS for the printed page.
  */
+
+/* Make the printed width match the width of the screen doc.
+   This is less wide than letter size page w/0.75 inch margin.
+   By making this less wide, we are less exposed to printer variance. */
+.print-body,
+#print-div > table,
+#print-div hr,
+#print-div ol { width: 650px; margin-left: auto; margin-right: auto;  }
 
 @media print {
   
