--- a/preview/docStyles.css
+++ b/preview/docStyles.css
@@ -748,3 +748,7 @@ body {
 /* This section sets math sizes */
 math   { font-size: 1em; }
 math .special-fraction { font-family: "Times New Roman"; }
+math .date-result {
+  font-family: Calibri, 'Helvetica Neue', Arial, Cambria, sans-serif;
+}
+
