--- a/preview/styles.css
+++ b/preview/styles.css
@@ -1170,6 +1170,9 @@ footnote::after {
 /* This section modifies Temml math CSS */
 math   { font-size: 1em; }
 math .special-fraction { font-family: "Times New Roman"; }
+math .date-result {
+  font-family: Calibri, 'Helvetica Neue', Arial, Cambria, sans-serif;
+}
 /* Create a hanging indent on calculations that wrap to a second line. */
 .hurmet-calc > math > mrow:not(:first-child) { margin-left: 2em }
 .hurmet-calc > math > mrow:not(:last-child) { margin-right: -2em }
