Apply CSS text-box to boxed section.

--- a/preview/styles.css
+++ b/preview/styles.css
@@ -821,7 +821,12 @@ ul.toc span + span {
 div.indented { margin-left: 2em; }
 div.centered { text-align: center; }
 div.right-justified { text-align: right; }
-div.boxed { width: fit-content; min-width: 2em; border: 1px solid #000; }
+div.boxed {
+  width: fit-content;
+  min-width: 2em;
+  text-box: trim-both text text;
+  border: 1px solid #000;
+}
 div.boxed p { line-height: 1.2; margin: 4px; }
 
 div.note,
