--- a/preview/docStyles.css
+++ b/preview/docStyles.css
@@ -388,6 +388,8 @@ td code {
   
 #input-container {
     font-size: 0.9em;
+    font-family: Consolas, 'Courier New', 'Cambria Math', monospace;
+    tab-size: 1;
     width: 100%;
     height: 3em;
     border-radius: 4px;
