--- a/preview/docStyles.css
+++ b/preview/docStyles.css
@@ -81,8 +81,7 @@ main {
     }
 }
 h1,
-h2,
-h3 {
+h2 {
     font-family: Verdana, sans-serif;
     font-variant: small-caps;
     letter-spacing: 0.05em;
@@ -98,10 +97,13 @@ h2 {
 }
 h3 {
     font-size: 110%;
+    font-weight: bold;
     margin-bottom: 0.5em;
     margin-top: 0.8em;
 }
 h4 {
+    font-size: 95%;
+    font-weight: bold;
     margin-bottom: 0.5em;
     margin-top: 0.8em;
 }
