--- a/preview/styles.css
+++ b/preview/styles.css
@@ -953,10 +953,38 @@ div.warning > *:first-child::before {
    font-family: "Temml";
  }
  
+ /* Cramped superscripts in WebKit */
+ mfrac > :nth-child(2),
+ msqrt,
+ mover > :first-child {
+   math-shift: compact
+ }
+ 
+ .menclose {
+   display: inline-block;
+   position: relative;
+   padding: 0.5ex 0ex;
+ }
+ .tml-cancelto {
+   display: inline-block;
+   position: absolute;
+   top: 0;
+   left: 0;
+   padding: 0.5ex 0ex;
+   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'><defs><marker id='a' markerHeight='5' markerUnits='strokeWidth' markerWidth='7' orient='auto' refX='7' refY='2.5'><path fill='currentColor' d='m0 0 7 2.5L0 5z'/></marker></defs><line x2='100%' y1='100%' stroke='currentColor' stroke-width='.06em' marker-end='url(%23a)' vector-effect='non-scaling-stroke'/></svg>");
+ }
+ 
  @supports (-moz-appearance: none) {
    /* \vec w/o italic correction for Firefox */
    .tml-vec {
      transform: scale(0.75)
+   }
+   /* Fix \cancelto in Firefox */
+   .ff-narrow {
+     width: 0em;
+   }
+   .ff-nudge-left {
+     margin-left: -0.2em;
    }
  }
  
@@ -1062,7 +1090,7 @@ div.warning > *:first-child::before {
      padding: 0.5ex 0ex;
    }
    
-     .tml-overline {
+   .tml-overline {
      padding: 0.1em 0 0 0;
      border-top: 0.065em solid;
    }
@@ -1227,8 +1255,7 @@ div.warning > *:first-child::before {
  
  body {
    counter-reset: tmlEqnNo;
- }
- 
+ } 
 
 .ProseMirror {
   counter-reset: prosemirror-footnote;
